# csv2iif

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: auto-update-pr.yml  ci.yml  create-release.yml  release.yml
examples/: sample.csv
src/csv2iif/: __init__.py  __main__.py  cli.py  converter.py  csv_reader.py  iif_writer.py  logger.py  models.py
tests/: __init__.py  test_cli.py  test_converter.py  test_csv_reader.py  test_iif_writer.py  test_logger.py  test_main.py  test_models.py  test_models_extended.py
